<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.mwensveen.constantnameconverter</groupId>
   <artifactId>nl.mwensveen.cnc-project</artifactId>
   <version>3.2.0</version>
   <packaging>pom</packaging>
   <name>Constant Name Converter - Project</name>
   <description>Eclipse plugin for converting variable names to constants and vise versa.</description>
   <modules>
      <module>feature</module>
      <module>plugin</module>
      <module>repo</module>
      <module>test</module>
   </modules>
   <properties>
      <tycho-version>1.3.0</tycho-version>
   </properties>
   <build>
      <pluginManagement>
         <plugins>
            <!-- important for self-hosting -->
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
               <version>2.4.3</version>
            </plugin>
            <plugin>
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>target-platform-configuration</artifactId>
               <version>${tycho-version}</version>
               <configuration>
                  <resolver>p2</resolver>
                  <ignoreTychoRepositories>true</ignoreTychoRepositories>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-compiler-plugin</artifactId>
               <version>${tycho-version}</version>
               <configuration>
                  <compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
                  <requireJREPackageImports>true</requireJREPackageImports>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-maven-plugin</artifactId>
               <version>${tycho-version}</version>
               <extensions>true</extensions>
            </plugin>
            <plugin>
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-surefire-plugin</artifactId>
               <version>${tycho-version}</version>
               <configuration>
                  <useUIHarness>true</useUIHarness>
                  <includes>
                     <include>**/*Test.java</include>
                  </includes>
                  <argLine>${tycho.test.jvmArgs}</argLine>
                  <!-- kill test JVM it tests take more than 10 minutes (600 seconds) 
							to finish -->
                  <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-versions-plugin</artifactId>
               <version>${tycho-version}</version>
            </plugin>
         </plugins>
      </pluginManagement>
      <plugins>
         <plugin>
            <groupId>com.github.ekryd.sortpom</groupId>
            <artifactId>sortpom-maven-plugin</artifactId>
            <version>2.8.0</version>
            <configuration>
               <predefinedSortOrder>custom_1</predefinedSortOrder>
               <lineSeparator>\n</lineSeparator>
               <encoding>${project.build.sourceEncoding}</encoding>
               <sortProperties>true</sortProperties>
               <keepBlankLines>true</keepBlankLines>
               <sortModules>true</sortModules>
               <sortDependencies>scope,groupId,artifactId</sortDependencies>
               <sortPlugins>groupId,artifactId</sortPlugins>
               <nrOfIndentSpace>3</nrOfIndentSpace>
               <createBackupFile>false</createBackupFile>
            </configuration>
            <executions>
               <execution>
                  <goals>
                     <goal>sort</goal>
                  </goals>
                  <phase>verify</phase>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.5.1</version>
            <configuration>
               <debug>true</debug>
               <verbose>true</verbose>
               <compilerVersion>1.7</compilerVersion>
               <source>1.7</source>
               <target>1.7</target>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>target-platform-configuration</artifactId>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-maven-plugin</artifactId>
            <extensions>true</extensions>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-versions-plugin</artifactId>
         </plugin>
      </plugins>
   </build>
   <repositories>
      <repository>
         <id>eclipse</id>
         <url>http://download.eclipse.org/releases/2018-12</url>
         <layout>p2</layout>
      </repository>
   </repositories>
   <profiles>
      <profile>
         <id>sun-jvm</id>
         <activation>
            <property>
               <name>java.vendor.url</name>
               <value>http://java.sun.com/</value>
            </property>
         </activation>
         <properties>
            <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
         </properties>
      </profile>
      <profile>
         <id>sign</id>
         <activation>
            <property>
               <name>jarsigner.alias</name>
            </property>
         </activation>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-jarsigner-plugin</artifactId>
                  <version>1.2</version>
                  <executions>
                     <execution>
                        <id>sign</id>
                        <goals>
                           <goal>sign</goal>
                        </goals>
                     </execution>
                  </executions>
               </plugin>
            </plugins>
         </build>
      </profile>
   </profiles>
</project>
